deployments/nodejs-app1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-app1
  labels:
    name: nodejs-app1
    app: nodejs-app1
