deployments/nodejs-app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app1
  namespace: nodejs-app1
  labels:
    app: nodejs-app1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nodejs-app1
