deployments/nodejs-app1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-app1
  namespace: nodejs-app1
  labels:
    app: nodejs-app1
spec:
  to:
    kind: Service
    name: nodejs-app1
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
